mobile overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Mobile Fix */
+html, body {
+  overflow-x: hidden;
+}
+
+* {
+  max-width: 100%;
+}
